ReSharper.FSharp/test/data/parsing/errors/Type member - Interface 02.fs
type T1 =
    interface I with
    interface I with
        member x.P = ()
